# miniature

./: .gitignore  CLAUDE.md  README.md  parsed_results.json  pyproject.toml  pytest.ini  runsh.pkg.json  test.sh
.miniature/: gitdbs.json
description/: ai_tinkereres.md
example/: miniature.json
example_pkg/: runsh.pkg.json
examples/: example_load.py  example_publish.py  example_push.py  example_tag.py  utils.py
examples/.miniature/: gitdbs.json  load.pkg.json
prompts/: about_runsh.md  what_to_develop.md  write_runsh_script.md
scripts/: _push.sh  load.sh  publish.sh
src/miniature/: load.py  models.py  publish.py  push.py  tag.py
tests/: test_publish.py
tests/load/: test_load_pkg.py  test_load_utils.py
