[project]
name = "miniature"
version = "2.0.0"
description = ""
authors = [
    {name = "Sisung Kim",email = "sisung.kim1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyshell",
    "packaging",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "allure-pytest>=2.13.0",
    "pytest-bdd>=6.0.0",
]
